--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   equatable: ^1.1.0
   http: ^0.12.0+4
   sqflite: ^1.3.0
-
+  path_provider: ^1.6.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
